--- a/DDL-Parser.csproj
+++ b/DDL-Parser.csproj
@@ -8,8 +8,9 @@
     <OutputType>Library</OutputType>
     <RootNamespace>DDL_Parser</RootNamespace>
     <AssemblyName>DDL-Parser</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <AppDesignerFolder>Properties</AppDesignerFolder>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Platform)' == 'x86' ">
     <PlatformTarget>x86</PlatformTarget>
